# Soroban-Registry

./: CI_CD_ALL_FEATURES_STATUS.md  CI_CD_FINAL_STATUS.md  CI_CD_QUICK_REFERENCE.md  COST_ESTIMATION_IMPLEMENTATION.md  FEATURES_SUMMARY.md  MATURITY_LEVELS_IMPLEMENTATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-build.yml
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/src/: audit_handlers.rs  handlers.rs  main.rs  metrics.rs  models.rs  resource_tracking.rs  routes.rs  state.rs
backend/indexer/: Cargo.toml
backend/indexer/src/: main.rs
backend/shared/: Cargo.toml
backend/shared/src/: error.rs  lib.rs  models.rs
backend/verifier/: Cargo.toml
backend/verifier/src/: lib.rs
cli/: Cargo.toml
cli/src/: backup.rs  commands.rs  incident.rs  main.rs  package_signing.rs
database/migrations/: 001_initial.sql
frontend/: next.config.ts  package-lock.json
frontend/app/: globals.css  page.tsx
frontend/app/contracts/: contracts-content.tsx
frontend/app/contracts/[id]/: page.tsx
frontend/app/graph/: graph-content.tsx
frontend/app/templates/: page.tsx
frontend/components/: DependencyGraph.tsx  ThemeToggle.tsx
frontend/lib/: api.ts
frontend/providers/: ThemeProvider.tsx
scripts/: ci-check.sh
